syntax = "proto3";

service MiniTwitter {
    rpc sendMessage(MessageRequest) returns (Response);
    rpc getMessages(GetMessagesRequest) returns (MessagesResponse);
}

message MessageRequest {
    string content = 1;
}

message GetMessagesRequest {
    int32 count = 1;
}

message Response {
    string status = 1;
}

message MessagesResponse {
    repeated string messages = 1;
}
